--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "vlive-frontend",
   "version": "0.1.0",
-  "private": true,
+  "description": "A vlive project frontend",
+  "author": "Team brosis <eunbines2@gmail.com>",
+  "contributors": [
+    "Hayun Yang <mycolki@gmail.com>",
+    "Hyojung Cho <hyojeongcho1019@gmail.com>",
+    "Eunbin Kim <eunbines2@gmail.com>"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,12 +15,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.1",
     "next": "11.1.2",
+    "prop-types": "^15.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.0.0"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^11.1.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^7.0.2",
+    "prettier": "^2.3.2"
   }
 }
