--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "firebase": "^8.10.0",
     "next": "11.1.2",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
