--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
-  'singleQuote': tur,
-  'semi': true,
-  'useTabs': false,
-  'tabWidth': 2,
-  'trailingComma': 'all',
-  'printWidth': 80,
-  'endOfLine': 'lf'
+  "singleQuote": true,
+  "semi": true,
+  "useTabs": false,
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "printWidth": 80,
+  "endOfLine": "lf"
 }
