--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "express": "^4.17.1",
     "firebase": "^8.10.0",
     "next": "11.1.2",
     "prop-types": "^15.7.2",
