--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "Eunbin Kim <eunbines2@gmail.com>"
   ],
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -26,6 +26,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "socket.io": "^4.2.0",
+    "socket.io-client": "^1.7.4",
     "swr": "^1.0.0"
   },
   "devDependencies": {
