--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "~4.16.1",
     "firebase": "^8.10.0",
     "next": "11.1.2",
+    "nodemon": "^2.0.12",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
