--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "Eunbin Kim <eunbines2@gmail.com>"
   ],
   "scripts": {
-    "dev": "next dev",
+    "dev": "nodemon server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint",
     "prepare": "husky install",
     "test": "echo \"Error: no test specified\" && exit 0"
@@ -19,12 +19,15 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "express": "~4.16.1",
     "firebase": "^8.10.0",
     "next": "11.1.2",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "socket.io": "^4.2.0",
+    "socket.io-client": "^4.2.0",
     "swr": "^1.0.0"
   },
   "devDependencies": {
