--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "simple-peer": "^9.11.0",
     "socket.io": "^4.2.0",
     "socket.io-client": "^4.2.0",
     "swr": "^1.0.0"
