chores: change script dev commend

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "Eunbin Kim <eunbines2@gmail.com>"
   ],
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "node server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
     "lint": "next lint",
