--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,6 @@
 /coverage
 
 # next.js
-/.next/
 /out/
 
 # production
@@ -41,3 +40,8 @@ yarn-error.log*
 
 # certificates
 /certificates
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
