feat: add Channel component test

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "NODE_ENV=production node server.js",
     "lint": "next lint",
     "prepare": "husky install",
-    "test": "jest --watch"
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.4.1",
